# Aprendizaje-profundo

./: .gitignore  .markdownlint.json  README.md  TODO.md  index.html  pyproject.toml
Exercises/: Redes convolucionales - Clasificación alternativa.ipynb  Redes convolucionales - Implementando LeNet.ipynb  Redes neuronales artificiales - Clasificación de diabetes-Copy1.ipynb  Redes neuronales artificiales - Clasificación de diabetes.ipynb  Redes neuronales artificiales - Comparación de rendimiento de modelos.ipynb
Notebooks/: 02. Perceptrón simple y perceptrón multicapa.ipynb  03. Clasificación de dígitos con redes convolucionales.ipynb  03. Clasificación de dígitos con redes de convolución.ipynb  A ver si nos hacemos ricos (LSTM edition).ipynb  A ver si nos hacemos ricos.ipynb  Apilando redes recurrentes.ipynb  Clasificación de dígitos con redes convolucionales copy.ipynb  Clasificación de dígitos con redes convolucionales.ipynb  Despliegue de modelos - Creación de la capa OneHotEncoding para modelos de Keras.ipynb  Despliegue de modelos - Ejemplos de capas de Keras para el proceso de datos.ipynb  Despliegue de modelos - Importar y exportar modelos en formato ONNX.ipynb  Despliegue de modelos - Modelos compactos para sistemas empotrados.ipynb  Despliegue de modelos - Optimizando un modelo de Keras para producción.ipynb  Despliegue de modelos - Sirviendo un modelo mediante TensorFlow Serve.ipynb  Despliegue de modelos - Using keras models in sklearn's pipelines.ipynb  Detección de objetos - Clasificación y localización de objetos.ipynb  Generación de música.ipynb  (+34 more)
(+14 files in other folders)
